# WatchlistDailyBrief

./: .env.example  .gitignore  01 Monitor_Ticker_List (January 2026).xlsx  BuildPlan.md  README.md  config.yaml  config.yaml.example  peer_map.csv  pyproject.toml  requirements.txt  sector_map.csv
.context/: ARCHITECTURE.md  CONVENTIONS.md  DATA_FLOW.md  NEWS_PROCESSING.md
buildPlans/: news_processing_spec_for_claude.md  phase1_why_attribution_build_plan.md
scripts/: run_daily.py
tests/: __init__.py  test_llm.py  test_ranking.py  test_renderer.py  test_scanners.py  test_trend_context.py  test_triggers.py
watchbrief/: __init__.py  cli.py  cli_v25.py  config.py
watchbrief/data/: __init__.py  events.py  market_data.py  news_processor.py
watchbrief/features/: __init__.py  attribution.py  ranking.py  scanners.py  trend_context.py  triggers.py
watchbrief/llm/: __init__.py  client.py  explain.py  prompt.py  trend_prompt.py
watchbrief/output/: __init__.py  emailer.py  renderer.py  slack.py
watchbrief/storage/: __init__.py  db.py  feedback.py  models.py
